fix text alignment and double firing of page download

--- a/setup-wizard/src/app/pages/success/success.page.scss
+++ b/setup-wizard/src/app/pages/success/success.page.scss
@@ -27,7 +27,3 @@ a {
     font-size: 24px;
   }
 }
-
-.hiddenPage {
-  display: none;
-}
